project_2/css/styles.css
.article {
  float: left;
  margin: 50px;
  padding: 5px;
  width: 300px;
  height: 300px;
  margin-bottom: 85px;
}

.contact-div{
  text-align: center;
  display:inline-block;
  }
nav {
  text-align: center;
}
img {
width:100%;

}
body {
       font-family: 'Roboto', sans-serif;
       font-size: 20px;
       line-height: 1.5;
			 padding: 0 35px;

     }

     /* nav */
    		 .main-nav {
    		 margin-top: 5px;
         padding:20px;
         list-style:none;
         width:525px;
         display: inline;
         text-align: center;
    		 }

         nav ul li a:hover, nav ul li a:focus {
           color: black;
           background-color: lightblue;
           font-weight: bold;
         }
h1,
h2,
h3,
p {
  text-align: center;
}
img {
  width: 100%;
}
         * {
     box-sizing: border-box;
     }
     .contact-div {
       font-family: 'EB Garamond', serif;
       text-align: center;
     }
.contact-div p {
  text-align: center;
  display: inline-block;
}
     h1 {
       font-size: 30px;
     }
     .section {
       background-color: lightblue;
     }
h3 {
  color: blue;
}
.skills {
  text-align: center;

  padding-top: 20px;
  margin-top: 20px;
  clear:both;
}
.footer-ul {
    display: none;
}
.top {
  text-align: center;
  float:right;
}
.footer-nav {
    padding: 1.5em 0;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.footer-nav h3 {
    display: inline;
    font-size: 1em;
    padding-right: 6.2em;
}



/* media queries*/

@media screen and (min-width: 768px) {
  header {
    height: 325px;
  }

  .main-nav {
    display: inline-flex;
    text-align: center;
    width: auto;
  align-content: center;
}

.main-nav li {
  display: inline-block;
  text-align: center;
  align-content: center;
  padding-left: 11px
}
.profile {
    float: right;
    width: 250px;
  }
  .col {

      width: 50%;
      height: 400px;
      padding: 50px;
    }


.top {
  float:right;

}


@media screen and (min-width: 1024px) {
       header {
       height: 350px;
     }

     img {
       width: 100%;
     }
     .portfolio {
       float:left !important;
     }

     .main-nav {
         float: right;
         text-align: center;
         position: absolute;
         top: 3%;
         right: 3%;
       }
       .main-nav li {
           display: inline-block;
           text-align: center;
           padding-left: 11px;
         }
         .profile {
            float: right;
            width: 300px;
          }
       .col {
      width: 30%;
      height: 450px;
      float: left;
      text-align: center;
      padding-left: 20px;
      padding: 50px;
    }
    .skills {
        clear: both;
        padding-top: 50px;
        text-align: center;
        margin-top: 20px;
      }
      .contact-div {
        text-align: center;
      }
.end-name {
 text-align: left;
}
.footer-ul li{
  list-style-type: none;
}
.footer-ul {
        display: block;
        float:right;
        list-style-type: none;
    }

    .footer-ul li {
        display: inline;
        padding-left: 1.2em;
    }

.top {
  display:none;
}

}

